# axum_backend

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/2023-06-04-233712_testimonials/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/database/: schema.rs
src/models/: generic.rs  mod.rs  reaction.rs  testimonial.rs
src/router/: guard.rs  mod.rs  router.rs  router_utils.rs
src/router/routes/: create_reaction.rs  create_testimonial.rs  create_user_route.rs  get_reaction.rs  get_testimonial.rs  get_testimonial_count.rs  hello_route.rs  mod.rs  reaction_route.rs  root_route.rs  router_utils.rs  testimonial_route.rs  user_route.rs
src/utils/: validators.rs
